# triton

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  Makefile  README.md  amd-gemm-pipelined.py  arg0_1.pt  arg2_1.pt  buf0_bad_commit.pt  debug_helper.sh  getitem.pt  glocal_full.py  kernel-practice.py  out.pt  ovr_88.ttgir  primals.pt  print-ir.py  reproducer.mlir  setup.py  tangents.pt  test.py  test_subtile_gemm.py  triton-manual-build.sh  triton_only_repro.py
.backports/: backport-prompt.md  backport-sync.sh  build-wheel.sh  test-wheel.sh
.backports/3.7.3/: backport_3.7.3.md  commit-dag.html
.backports/3.7.x/: candidates.tsv  pick-log.md
.ci/tritonbench/: checkout.sh  fbtriton_skip_tests.yaml  test-gpu.sh
.claude/reviewers/: reviewers.yaml  run-review.sh
.claude/rules/: core-compiler-cpp.md  gluon.md  python-compiler.md  tlx-dialect.md  tlx-dsl.md  tlx-tutorials.md
.claude/sched2tlx/: ddg_validation_harness.md  e2e_perf_harness.md  generating_ddg_json.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/scripts/: bisect_failure.sh  classify_failure.py  compute_suspects.py  generate_release_testing_matrix.py  nightly_build_index.py  nightly_gen_simple_index.py  nightly_prune.py  nightly_run.py  nightly_select.py  parse_junit_failures.py  parse_lit_failures.py  test_classify_failure.py  test_compute_suspects.py  test_nightly_gen_simple_index.py  test_nightly_select.py
.github/workflows/: _linux-release-testing.yml  b200.yml  bisect-nightly-failure.yml  build-macos.yml  ci-gpu.yml  ci.yml  claude-review.yml  compiler.yml  create_release.yml  h100.yml  integration-tests.yml  llvm-build.yml  mi350.yml  nightly-fbtriton.yml  nightly-issue-dryrun.yml  pre-commit-autofix.yml  pre-commit.yml  publish-pypi.yml  publish_fbtriton.yml  reconcile-nightly-issues.yml  release-testing.yml  report-ci-failure.yml  report-nightly-failure.yml  runner-preparation.yml  tlx.yml  torchtlx.yml  tritonbench.yml  wheels.yml  wheels_fb.yml
.llms/rules/: partition-scheduler-bugs.md
autows-doc/: ReuseGroups.md
bitequiv/: CLAUDE.md  PROGRESS.md  design-doc.md  equivalence.py  equivalence_ptx.py  equivalence_ttgir.py  ptx_reduction.py  reduction_tree.py  requirements.txt  ttgir_reduction.py
bitequiv/amdgcn/: __init__.py  parser.py
bitequiv/evaluation/: .gitignore  README.md  benchmark_kernels.py  complex_fusion_kernels.py  equivalence_fuzzer.py  eval_kernels.py  evaluate.py  evaluate_complex_kernels.py  evaluate_opt.py  evaluate_reduction_equivalence.py  realistic_inductor_kernels.py
bitequiv/examples/: README.md  autotune_equivalence_pruning.py  constraint_pruning_examples.py
bitequiv/ptx/: __init__.py  affine.py  builder.py  leaves.py  linker.py  treeir.py
bitequiv/reports/: gpu_validation_result.txt  run_gpu_validation.sh  run_t2_examples.sh
bitequiv/tests/: gen_ttgir_fixtures.py  test_amdgcn_parser.py  test_autotune_equivalence_example.py  test_constraint_pruning.py  test_equivalence.py  test_equivalence_ptx.py  test_equivalence_ttgir.py  test_layout_numerics.py  test_opt_kernel_suite.py  test_ptx_affine.py  test_ptx_builder.py  test_ptx_forward.py  test_ptx_kernel_suite.py  test_ptx_layout_gap.py  test_ptx_linker.py  test_ptx_reduction.py  test_reduction_tree.py  test_ttgir_kernel_suite.py  test_ttgir_reduction.py
claude/: README.md  _pinned_run.py  llir_sched_at_ttgir_design.md  llir_sched_at_ttgir_plan.md  phase4_coverage.py  ttgir_sched_status.md
cmake/: glibc_compat.c  llvm-hash.txt
devmate/: hstu_self_attn_dp2_ws_cases.md  memory_planner_analysis.md  partition_sched_meta.md  smem_allocation_design.md
devmate/codepart/: barrier_insertion.md  code_partition_barrier_summary.md  operand_d_channels_and_barriers.md  reuse_group_2buffer_design.md  ws_code_partition_bwd_findings.md
doc/: causal_optimizations.md
docs/: BarrierAnalysis.md  LOAD_STORE_PROGRAM_ID_ANALYSIS.md  NumericalInvariance.md  barrier_deadlock_detection_design.md  deadlock_detection_issue.md  index.rst
docs/design/: 2cta-autoWS-sync.md  2cta-support-design.md  amd_global_instruction_scheduling.md  llm-autows.md  triton-clc-tile-scheduler.md  triton-tile-scheduler.md  triton_jit_launch_optimization.md  triton_tma_multicast.md  ws_global_instruction_scheduling.md
dump-3.4/ZN4CCXJKLTTZWD2PKYOSIC2FJGLHMVO5FZJDWIQFZNEEPZANLABA/: triton_kernel.llir  triton_kernel.ptx  triton_kernel.ttgir  triton_kernel.ttir
dump-3.5/4XMXSVGL7FQWMGVGPYKDAEYEXEXF4SA2FGUTDZAUGVVZDHOSAGAQ/: triton_kernel.llir  triton_kernel.ptx  triton_kernel.ttgir  triton_kernel.ttir
examples/plugins/: CMakeLists.txt
infra/: README.md  b200-values.yaml  values.yaml
lib/Analysis/: Alias.cpp  AxisInfo.cpp  (+11 more)
python/: async_tlx.py  build_helpers.py
scripts/: _torchtlx_torch_shim.py  bisect_llvm.sh  bisect_triton.sh  build-glibcxx-compat.sh  build-llvm-project.sh  commits.csv  dump_hopper_fa.py  dump_hopper_gemm_ws.py  dump_hopper_kernels.py  run_torchtlx_perf.sh  run_torchtlx_tests.sh  test_hopper_deadlock.py
sema-docs/: README.md  assign-stage-phase-and-lower-semaphores.md  insert-allocas.md  meta-aws-nvws-bridge.md  nvws-aws-overview.md  order-buffer-groups.md  pack-epilogue-slices.md
test/: CMakeLists.txt  lit.cfg.py
triton/: tlx
triton-lint/: Makefile  README.md  build.sh  build_now.sh  pyproject.toml  test_build.sh  triton_lint_simple.py
triton-lint/examples/: bad_kernel.py  good_tma_kernel.py  kernel_with_spills.py
triton-lint/include/triton-lint/: Passes.h
triton-lint/lib/: CMakeLists.txt  TMAVerificationPass.cpp
triton-lint/tests/: __init__.py  test_ast_analyzer.py  test_spill_analyzer.py
triton-lint/triton_lint/: __init__.py  cli.py  tma_verifier.py
triton-lint/triton_lint/analyzers/: __init__.py  ast_analyzer.py  base.py  mlir_analyzer.py  ttir_analyzer.py
triton-lint/triton_lint/analyzers/spill_analyzer/: __init__.py  aggregator.py  analyzer.py  debug_mapper.py  ptx_parser.py
triton-lint/triton_lint/core/: __init__.py  config.py  finding.py  report.py
triton-lint/triton_lint/rules/: __init__.py
unittest/: CMakeLists.txt
(+1133 files in other folders)
